fix overflow-y

--- a/web/themes/custom/wikivisually_theme/sass/style.scss
+++ b/web/themes/custom/wikivisually_theme/sass/style.scss
@@ -1,13 +1,27 @@
 /* line 1, ../sass/style.scss */
 
-html, body {
-  overflow-x: hidden!important;
+html {
+  overflow-x: hidden !important;
 }
 
+body {
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
+}
 /* Large desktops */
 @media (min-width: 1400px) {
-  html, body {
-    overflow-x: hidden!important;
+  html {
+    overflow-x: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden;
   }
   #block-wikisearchblock {
     position: relative !important;
@@ -46,8 +60,13 @@ html, body {
 
 /* Large laptops */
 @media (min-width: 1200px) {
-  html, body {
-    overflow-x: hidden!important;
+  html {
+    overflow-x: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
   div.region.region-header {
     background: #1565c0;
@@ -210,8 +229,13 @@ html, body {
 
 /* Landscape tablets and medium desktops */
 @media (min-width: 992px) and (max-width: 1199px) {
-  html, body {
-    overflow-x: hidden!important;
+  html {
+    overflow-x: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
   div.region.region-header {
     background: #1565c0;
@@ -372,8 +396,13 @@ html, body {
 
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 991px) {
-  html, body {
-    overflow-x: hidden!important;
+  html {
+    overflow-x: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
   div.region.region-header {
     background: #1565c0;
@@ -542,8 +571,13 @@ html, body {
 
 /* Landscape phones and portrait tablets */
 @media (max-width: 767px) {
-  html, body {
-    overflow-x: hidden!important;
+  html {
+    overflow-x: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
   div.region.region-header {
     background: #1565c0;
@@ -722,8 +756,13 @@ html, body {
 
 /* Portrait phones and smaller */
 @media (max-width: 480px) {
-  html, body {
-    overflow-x: hidden!important;
+  html {
+    overflow-x: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
   div.region.region-header {
     background: #1565c0;
@@ -875,8 +914,13 @@ html, body {
 }
 
 @media (max-width: 320px) {
-  html, body {
-    overflow-x: hidden!important;
+  html {
+    overflow-x: hidden !important;
+  }
+
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
   #block-mainnavigation-2 li.first a, #block-wikivisually-theme-main-menu li.first a {
     margin-left: 0px;
